Added message for RCP Launcher.

--- a/source/org.eclipse.ve.java.core/vm_vcelauncher/org/eclipse/ve/internal/java/vce/launcher/remotevm/messages.properties
+++ b/source/org.eclipse.ve.java.core/vm_vcelauncher/org/eclipse/ve/internal/java/vce/launcher/remotevm/messages.properties
@@ -10,13 +10,14 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve.java.core/vm_vcelauncher/org/eclipse/ve/internal/java/vce/launcher/remotevm/messages.properties,v $
-# $Revision: 1.7 $  $Date: 2005-02-15 23:29:42 $
+# $Revision: 1.8 $  $Date: 2005-05-20 20:36:02 $
 #
 
 
 BeansLauncher.Err.SettingLookAndFeel_ERROR_         = IWAV0047E Error setting look and feel to {0}
 BeansLauncher.Msg.BeanWithNullConstructor_INFO_     = IWAV0048I Java Bean {0} started with null constructor
 BeansLauncher.Msg.BeanWithMain_INFO_                = IWAV0055I Java Bean {0} started with the main method
+BeansLauncher.Msg.ViewPartHost_INFO_                = Java Bean {0} started with the ViewPart Host
 BeansLauncher.Msg.BeanWithShellMethod_INFO_         = IWAV0056I Java Bean {0} started with the {1} method
 BeansLauncher.Err.UnableToLoad_ERROR_               = IWAV0049E Unable to load class {0}
 BeansLauncher.Err.NoDefaultConstructor_ERROR_       = IWAV0050E No default constructor to instantiate class {0}
