--- a/source/org.eclipse.ve.cde/cde/org/eclipse/ve/internal/cde/core/messages.properties
+++ b/source/org.eclipse.ve.cde/cde/org/eclipse/ve/internal/cde/core/messages.properties
@@ -10,7 +10,7 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve.cde/cde/org/eclipse/ve/internal/cde/core/messages.properties,v $
-# $Revision: 1.16 $  $Date: 2005-05-18 19:31:04 $
+# $Revision: 1.17 $  $Date: 2005-05-20 21:53:21 $
 #
 
 
@@ -100,6 +100,7 @@ AlignmentXYGridPropertiesPage.Margin_Must_Be_Positive         = Margin must be p
 AlignmentXYGridPropertiesPage.Margin_Must_Be_Integer          = Margin must be an integer
 AlignmentXYGridPropertiesPage.Keep_Width_Height_Same          = Keep width and height the same
 AlignmentXYGridPropertiesPage.Show_Grid                       = Show Grid
+AlignmentXYGridPropertiesPage.Snap_To_Grid                    = Snap To Grid
 
 #
 # Show grid Action Properties
