--- a/trunk/source/org.eclipse.ve/plugins/org.eclipse.ve.java.core/core/org/eclipse/ve/internal/java/core/messages.properties
+++ b/trunk/source/org.eclipse.ve/plugins/org.eclipse.ve.java.core/core/org/eclipse/ve/internal/java/core/messages.properties
@@ -10,7 +10,7 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve/plugins/org.eclipse.ve.java.core/core/org/eclipse/ve/internal/java/core/messages.properties,v $
-# $Revision: 1.14 $  $Date: 2005-05-18 14:35:42 $
+# $Revision: 1.15 $  $Date: 2005-05-23 16:33:54 $
 #
 
 
@@ -92,3 +92,4 @@ NameInMemberPropertyDescriptor.NameChangeDialog.Dialog.Title=Bean Name
 NameInMemberPropertyDescriptor.NameChangeDialog.Dialog.Message=Provide names for beans
 NameInMemberPropertyDescriptor.NameChangeDialog.Shell.Title=Name
 BeanProxyAdapter2.RemoveOverrideProperty.ExpressionMustNotBeNull_EXC_=Expression must not be null when bean in instantiated.
+CustomizePropertyNotFound_ERROR = The event signalled {0} does not exists on type (1)
