--- a/trunk/source/org.eclipse.ve.jfc/jfc/org/eclipse/ve/internal/jfc/core/messages.properties
+++ b/trunk/source/org.eclipse.ve.jfc/jfc/org/eclipse/ve/internal/jfc/core/messages.properties
@@ -10,7 +10,7 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve.jfc/jfc/org/eclipse/ve/internal/jfc/core/messages.properties,v $
-# $Revision: 1.12 $  $Date: 2005-05-11 19:01:38 $
+# $Revision: 1.13 $  $Date: 2005-06-02 19:12:34 $
 #
 
 
@@ -61,6 +61,8 @@ GridLayoutLayoutPage.rows                             = Number of rows:
 GridLayoutLayoutPage.spacingTitle                     = Grid Spacing
 GridLayoutLayoutPage.horizontalGap                    = Horizontal gap:
 GridLayoutLayoutPage.verticalGap                      = Vertical gap:
+
+ImageProxyAdapter.imageurlnotfound                    = URL for image not found.
 
 FrameDefaultTitle                                     = (no title set for window in visual editor)
 
