--- a/trunk/source/org.eclipse.ve.java.core/codegen/org/eclipse/ve/internal/java/codegen/editorpart/messages.properties
+++ b/trunk/source/org.eclipse.ve.java.core/codegen/org/eclipse/ve/internal/java/codegen/editorpart/messages.properties
@@ -10,7 +10,7 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve.java.core/codegen/org/eclipse/ve/internal/java/codegen/editorpart/messages.properties,v $
-# $Revision: 1.18 $  $Date: 2005-05-13 15:19:48 $
+# $Revision: 1.19 $  $Date: 2005-06-03 14:43:20 $
 #
 
 
@@ -24,6 +24,7 @@ JavaVisualEditorPart.CleanupJVE                                    = Cleanup vis
 JavaVisualEditorPart.CreateRemoteVMForJVE                          = Create Remote VM for Visual Editor for Java
 JavaVisualEditorVMController.InactiveVMCheckJob.Text=Visual Editor for Java Inactive VM check
 JavaVisualEditorPart.InitializingModel                             = Initializing model
+JavaVisualEditorPart.ReleasingModel                                = Releasing model
 JVEActionContributor.Status.Creating(label)                        = Create {0}
 JVE_STATUS_MSG_INSYNC                                              = In Sync
 JVE_STATUS_MSG_NOT_IN_SYNC                                         = Out of Sync
