--- a/trunk/source/org.eclipse.ve.propertysheet/propertysheet/org/eclipse/ve/internal/propertysheet/messages.properties
+++ b/trunk/source/org.eclipse.ve.propertysheet/propertysheet/org/eclipse/ve/internal/propertysheet/messages.properties
@@ -10,7 +10,7 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve.propertysheet/propertysheet/org/eclipse/ve/internal/propertysheet/messages.properties,v $
-# $Revision: 1.5 $  $Date: 2005-02-15 23:47:33 $
+# $Revision: 1.6 $  $Date: 2005-06-03 19:21:09 $
 #
 
 
@@ -42,6 +42,9 @@ not_integer_WARN_                                   = IWAV0060W The value is not
 not_string_WARN_                                    = IWAV0061W The value is not a string.
 
 null_invalid_WARN_                                  = IWAV0062W The value of null is invalid.
+
+maxvalue                                            = Max
+minvalue                                            = Min
 
 ## {0} is a string describing the value.
 not_valid_WARN_                                     = IWAV0063W The value is invalid. {0}
